# projects_display

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: loop.md  pr-feedback.md
.claude/rules/: 01-architecture.md  02-fastapi-conventions.md  03-database.md  04-testing.md  05-code-style.md  06-workflow.md  README.md
.github/: CODEOWNERS  GITHUB_CONVENTION.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci-convention.yml  ci-quality.yml  ci.yml
app/: dependencies.py
app/auth/: config.py  dependencies.py  service.py  session.py
app/models/: blocks.py  orm.py
app/repositories/: file_repo.py  sqlite_blocks.py
app/routers/: auth.py  blocks.py  database.py  documents.py  files.py  notion_import.py  upload.py  url_embed.py
app/services/: file.py  image.py  notion_import.py  url_embed.py
docs/architecture/: README.md
docs/ci/: conventions.md  status-checks.md
docs/ko/: README.md
docs/prompts/: ISSUE.mdc
static/css/: style.css
static/js/: api.js  auth.js  blockPalette.js  blockRenderers.js  blockWrapper.js  documentList.js  editor.js  formattingToolbar.js  gallery.js  loginModal.js  main.js  notionImportModal.js  pagePickerModal.js  sidebar.js
templates/: base.html  index.html
templates/partials/: block_templates.html
tests/: conftest.py  test_auth.py  test_container_blocks.py  test_document_hierarchy.py  test_document_rename.py  test_fe_be_split.py  test_file_upload_download.py  test_image_block_actions.py  test_mermaid_code_block.py  test_notion_import.py  test_slash_command_block_change.py  test_url_embed.py
(+14 files in other folders)
