[project]
name = "projects-display"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
